Fixed a small spacing issue

--- a/style/src/buttons-and-boxes.css
+++ b/style/src/buttons-and-boxes.css
@@ -242,7 +242,7 @@
 
 .input-cap-dialog
 {
-	max-width: min(360px, calc(100vw - 72px));
+	max-width: min(360px, calc(100vw - 48px));
 	background-color: rgb(255, 255, 255);
 	color: rgb(96, 96, 96);
 	text-align: justify;
